--- a/app.json
+++ b/app.json
@@ -23,7 +23,7 @@
         "pagePath": "page/ProjectM/index",
         "icon": "image/icon_component.png",
         "activeIcon": "image/icon_component_HL.png",
-        "name": "项目相关"
+        "name": "梅林项目"
       }
     ]
   },
