--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "page/ProjectM/ProjectDiaryEdit/ProjectDiaryEdit"
   ],
   "window": {
-    "defaultTitle": "梅林ERP",
+    "defaultTitle": "梅霖ERP",
     "backgroundColor": "#F5F5F9",
     "pullRefresh": false,
     "allowsBounceVertical": "YES"
@@ -23,7 +23,7 @@
         "pagePath": "page/ProjectM/index",
         "icon": "image/icon_component.png",
         "activeIcon": "image/icon_component_HL.png",
-        "name": "梅林项目"
+        "name": "梅霖项目"
       }
     ]
   },
