--- a/app.json
+++ b/app.json
@@ -7,7 +7,8 @@
     "page/ProjectM/ProjectDiaryLook/ProjectDiaryLook",
     "page/ProjectM/ProjectDiaryList/ProjectDiaryList",
     "page/ProjectM/ProjectDiaryEdit/ProjectDiaryEdit",
-    "page/ProjectM/ProjectDiaryListLook/ProjectDiaryListLook"
+    "page/ProjectM/ProjectDiaryListLook/ProjectDiaryListLook",
+    "page/ProjectM/ProjectLook/ProjectLook"
   ],
   "window": {
     "defaultTitle": "梅霖ERP",
