--- a/app.json
+++ b/app.json
@@ -16,7 +16,11 @@
     "page/StorageWork/DingStorageInAdd/DingStorageInAdd",
     "page/ProjectM/DiaryToday/DiaryToday",
     "page/StorageWork/PurchaseOrderListAdd/PurchaseOrderListAdd",
-    "page/StorageWork/PurchaseOrderListPic/PurchaseOrderListPic"
+    "page/StorageWork/PurchaseOrderListPic/PurchaseOrderListPic",
+    "page/StorageWork/PurchaseList1Add/PurchaseList1Add",
+    "page/StorageWork/PurchaseList3Check/PurchaseList3Check",
+    "page/StorageWork/PurchaseList4Manage/PurchaseList4Manage",
+    "page/StorageWork/PurchasePic/PurchasePic"
   ],
   "window": {
     "defaultTitle": "梅霖ERP",
