--- a/app.json
+++ b/app.json
@@ -20,7 +20,9 @@
     "page/StorageWork/PurchaseList4Manage/PurchaseList4Manage",
     "page/StorageWork/PurchasePic/PurchasePic",
     "page/StorageWork/PurchaseList3Check2/PurchaseList3Check2",
-    "page/StorageWork/PurchaseList4Manage2/PurchaseList4Manage2"
+    "page/StorageWork/PurchaseList4Manage2/PurchaseList4Manage2",
+    "page/StorageWork/PurchaseList3Check3/PurchaseList3Check3",
+    "page/StorageWork/PurchaseList4Manage3/PurchaseList4Manage3"
   ],
   "window": {
     "defaultTitle": "梅霖ERP",
