--- a/app.json
+++ b/app.json
@@ -27,7 +27,14 @@
     "page/StorageWork/PurchasePic/PurchasePic",
     "page/StorageWork/StorageInListCheck/StorageInListCheck",
     "page/StorageWork/StorageInListCheck2/StorageInListCheck2",
-    "page/StorageWork/StorageInPic/StorageInPic"
+    "page/StorageWork/StorageInPic/StorageInPic",
+    "page/StorageWork/PurchaseList2Qty/PurchaseList2Qty",
+    "page/StorageWork/PurchaseList2Qty2/PurchaseList2Qty2",
+    "page/StorageWork/PurchaseEdit/PurchaseEdit",
+    "page/StorageWork/PurchaseList4Price/PurchaseList4Price",
+    "page/StorageWork/PurchaseList4Price2/PurchaseList4Price2",
+    "page/StorageWork/PurchaseEditPrice/PurchaseEditPrice",
+    "page/StorageWork/PurchaseList4Price3/PurchaseList4Price3"
   ],
   "window": {
     "defaultTitle": "梅霖ERP",
